[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nel-tools"
version = "0.1.0"
description = "Tools for processing neural electrophysiology data"
authors = [
  { name="Lucas Sullivan" }
]
dependencies = [
    "numpy",
    "scipy",
    "h5py"
]
requires-python = ">=3.7"

[tool.setuptools]
packages = ["nel_tools"]
